--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,10 @@
 }
 
 body {
-  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 background-image: url(/img/Backgroundform.jpg);
 background-attachment: fixed;
 background-size: cover;
@@ -16,21 +19,16 @@ h1 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.check1 {
-display: flex;
-}
-
 form {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  width: 500px;
+  width: 600px;
   margin: 0 auto;
 }
 
-label {
-  font-weight: bold;
-  margin-bottom: 5px;
+.divprincipal {
+  display: flex;
 }
 
 input,
